# fhirpath-py-server

./: Dockerfile  README.md  mypy.ini  pyproject.toml
.github/workflows/: publish.yaml
fhirpath_py_server/: fhirpath.py  main.py
